@@ -572,6 +572,9 @@ Release 2.7.2 - UNRELEASED
     MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
     if mapId is not in the cache. (zhihai xu via devaraj)
 
+    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
+    (zhihai xu via devaraj)
+
 Release 2.7.1 - 2015-07-06 
 
   INCOMPATIBLE CHANGES
